ci: fix Netlify lighthouse check (#1182)
* ci: use Netlify for Lighthouse check again

* ci: pass PR number

* ci: switch to probablyup/wait-for-netlify-action

* ci: fix reference

* ci: fix reference

* ci: try a different one

* ci: try a different one

* ci: don't use a secret

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -2,9 +2,9 @@ name: Audit site with Lighthouse CI
 
 on:
   push:
-    branches:
-      - "**"
-      - "!main"
+    branches: [dev, main]
+  pull_request:
+    branches: [dev, main]
 
 jobs:
   setup:
@@ -13,15 +13,11 @@ jobs:
       url: ${{ steps.netlify.outputs.url }}
     steps:
       - uses: actions/checkout@v4
-      - uses: jwalton/gh-find-current-pr/@v1
-        id: find-pr
-      - name: Wait for Netlify deploy preview
-        uses: kukiron/wait-for-netlify-deploy@v1.2.2
+      - name: Wait for Netlify Preview
+        uses: jakepartusch/wait-for-netlify-action@v1.4
         id: netlify
         with:
           site_name: idrc
-          pr_number: ${{ steps.find-pr.outputs.pr }}
-          max_timeout: 300
   lhci-mobile:
     name: Run mobile Lighthouse CI audits
     runs-on: ubuntu-latest
