chore: switch to new release process

--- a/renovate.json
+++ b/renovate.json
@@ -6,6 +6,7 @@
     "enabled": true,
     "automerge": true
   },
+  "labels": ["dependencies"],
   "packageRules": [
     {
       "matchUpdateTypes": ["minor", "patch"],
