fix: pronouns optional

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -593,8 +593,8 @@ collections:
         default: layouts/single--person.njk
       - {label: Full Name, name: title, widget: string}
       - {label: Job Title, name: job, widget: string}
-      - {label: Pronouns, name: pronouns, widget: string}
-      - {label: Email Address, name: email, widget: string, required: false}
+      - {label: Pronouns, name: pronouns, widget: string, required: false}
+      - {label: Email Address, name: email, widget: string}
       - label: Personal Website
         name: website
         widget: string
