--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "debug": "cross-env DEBUG=Eleventy* eleventy",
     "dev": "cross-env NODE_ENV=development eleventy --serve",
     "lint": "run-s -l lint:*",
-    "lint:styles": "stylelint \"**/*.css\"",
-    "lint:scripts": "eslint \"**/*.{js,cjs,md}\"",
-    "lint:markdown": "markdownlint-cli2 \"**/*.md\"",
-    "lint:yml": "eslint \"**/*.yml\"",
+    "lint:stylelint": "stylelint \"**/*.css\"",
+    "lint:eslint": "eslint",
+    "lint:markdownlint": "markdownlint-cli2 \"**/*.md\"",
     "test": "start-server-and-test start http://localhost:8080 backstop:test",
     "start": "npm-run-all -l clean dev",
     "prepare": "husky"
@@ -42,7 +41,6 @@
     "@11ty/eleventy-plugin-rss": "2.0.4",
     "d3-selection": "3.0.0",
     "eleventy-plugin-fluid": "3.1.4",
-    "eslint-config-fluid": "2.1.3",
     "infusion": "4.8.0",
     "markdown-it": "14.1.0",
     "npm-run-all2": "8.0.4"
@@ -53,30 +51,28 @@
     "@babel/plugin-syntax-import-assertions": "7.27.1",
     "@commitlint/cli": "20.3.0",
     "@commitlint/config-conventional": "20.3.0",
+    "@inclusive-design/eslint-config": "^0.1.1",
+    "@inclusive-design/markdownlint-config": "^0.1.0",
+    "@inclusive-design/stylelint-config": "^0.1.0",
     "backstopjs": "6.3.25",
     "cross-env": "10.1.0",
-    "eslint": "8.57.1",
-    "eslint-config-fluid": "2.1.3",
-    "eslint-plugin-jsdoc": "61.5.0",
-    "eslint-plugin-markdown": "5.1.0",
     "eslint-plugin-yml": "1.19.1",
     "husky": "9.1.7",
     "linkedom": "0.18.12",
     "lint-staged": "16.2.7",
-    "markdownlint-cli2": "0.20.0",
-    "markdownlint-config-fluid": "0.1.8",
     "rimraf": "6.1.2",
-    "start-server-and-test": "2.1.3",
-    "stylelint": "14.16.1",
-    "stylelint-config-fluid": "1.0.0",
-    "stylelint-use-logical-spec": "5.0.1"
+    "start-server-and-test": "2.1.3"
   },
   "lint-staged": {
-    "*.css": "stylelint --fix",
-    "*.{js,cjs,yml}": "eslint --fix",
-    "*.md": [
-      "markdownlint-cli2 --fix",
+    "*.css": [
+      "stylelint --fix"
+    ],
+    "*.{cjs,js,json,mjs}": [
       "eslint --fix"
+    ],
+    "*.md": [
+      "eslint --fix",
+      "markdownlint-cli2 --fix"
     ]
   }
 }
